--- a/angular.json
+++ b/angular.json
@@ -55,16 +55,18 @@
           },
           "configurations": {
             "production": {
-             "budgets": [
-  {
-    "type": "initial",
-    "maximumWarning": "1mb",
-    "maximumError": "2mb"
-  },
+              "budgets": [
+               {
+  
+    "type": "anyComponentStyle",
+    "maximumWarning": "16kb",
+    "maximumError": "24kb"
+  }
+,
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumWarning": "16kB",
+                  "maximumError": "24kB"
                 }
               ],
               "outputHashing": "all"
@@ -126,6 +128,9 @@
 
             ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
